--- a/src/assets/scss/pages/_interview.scss
+++ b/src/assets/scss/pages/_interview.scss
@@ -10,7 +10,8 @@
 
         .clipPath {
             padding-top: 195px;
-            clip-path: polygon(100% 0, 100% 100%, 85% 91%, 0 100%, 0 10%);
+            // clip-path: polygon(100% 0, 100% 100%, 85% 91%, 0 100%, 0 10%);
+            clip-path:  polygon(100% 0, 100% 100%, 85% 93%, 0 100%, 0 10%);
             background: linear-gradient(#2579BF, #2593D5);
 
             @include is-sp {
@@ -51,6 +52,10 @@
                 padding-top: 22px;
               
             }
+
+            @include is-max(350px) {
+                font-size: 7vw;
+            }
         }
         &-sub2 {
             @include font-line(13,26);
@@ -86,7 +91,7 @@
 
             &-1 {
                 width: 395px;
-                padding-bottom: 133px;
+                padding-bottom: 160px;
 
                 @include is-sp {
                     width: 100%;
@@ -103,6 +108,9 @@
                          @include font-line(25,37.5);
                          letter-spacing: 0.15em;
                      }
+                     @include is-max(350px) {
+                        font-size: 7vw;
+                    }
                    
                 }
 
@@ -173,7 +181,7 @@
             }
 
             &-2 {
-                padding-bottom: 83px;
+                padding-bottom: 55px;
                 height: 100%;
                 position: relative;
 
@@ -347,6 +355,7 @@
             position: absolute;
             right: 4%;
             bottom: 47.7%;  
+            z-index: -3;
             
             @include is-sp {
                 display: none;
@@ -355,27 +364,57 @@
     }
 
     .section_2 {
-    //    background-color: #fff;
-       padding:100px 30px 100px 30px;
        position: relative;
 
+
         &-cntnt {
-          
+            padding: 112px 0 78px 0;
             &-rows {
                 margin-bottom: 60px;
+                align-items: center;
+
+                
+                @include is-sp {
+                    flex-direction: column;
+                    margin-bottom: 50px;
+                }
 
                 &-1 {
+
+                    img {
+                        width: 100%;
+                    }
+                    @include is-max (977px) {
+                        width: calc(100% - 390px);
+                    }
+                    
+                    @include is-sp {
+                        width: 100%;
+                        
+                    }
 
                 }
 
                 &-2 {
                     width: 390px;
 
+                    @include is-max (977px) {
+                        padding-left: 20px;
+                    }
+
+                    @include is-sp {
+                        width: 100%;
+                    }
+
                     &-hdr {
                         @include font-line(26,37);
                         font-family: 500;
                         font-family: yu-mincho-pr6n, sans-serif;
                         color: #258ACF;
+
+                        @include is-sp {
+                            @include font-line (25,37.5);
+                        }
                         
                     }
 
@@ -384,6 +423,18 @@
                         font-family: century-gothic, sans-serif;
                         color: #95C6E7;
                         padding:23px 0 18px 0;
+
+                        @include is-sp {
+                            @include font-line(12.5,18.5);
+                            padding: 17px 0 22px 0;
+                        }
+                    }
+
+                    .img-sp {
+                        width: 100%;
+                        img {
+                            width: 100%;
+                        }
                     }
 
                     &-txt2 {
@@ -391,6 +442,11 @@
                         @include font-line(12,25);
                         font-weight: 500;
                         color: #333;
+
+                        @include is-sp {
+                            @include font-line (13.5,20);
+                            padding-top: 25px;
+                        }
                     }
                 }
            }  
@@ -398,21 +454,62 @@
            &-btns {
                width: 640px;
                margin:0 auto;
+
+               .txt {
+                   letter-spacing: 0.1em;
+               }
+               @include is-sp {
+                   flex-direction: column;
+                   height: 130px;
+                   width: 100%;
+                   justify-content: space-between;
+                   
+               }
            }
         }
 
         .sec2-bg1 {
             position: absolute;
-            top: 18%;
-            right: 7%;
-            z-index: -1;      
+            top: 22%;
+            right: 8.9%;
+            z-index: -1;
+
+            @include is-sp {
+                display: none;
+            }
         }
 
         .sec2-bg2 {
             position: absolute;
-            bottom: 0;
-            right: 8%;  
-            z-index: -1;           
+            top: 58.8%;
+            left: 3%;
+            z-index: -1;   
+            
+            @include is-sp {
+                display: none;
+            }
+        }
+
+        .sec2-bg3 {
+            position: absolute;
+            bottom: 12%;
+            right: 4%;
+            z-index: -1;
+            opacity: 0.5;
+
+            @include is-sp {
+                display: none;
+            }
+        }
+        .sec2-bg1-sp {
+            width: 122px;
+            position: absolute;
+            top: 4%;
+            right: 2%;
+        }
+
+        .sec2-bg2-sp {
+            width: 115.5px;
         }
     }
 
