--- a/src/assets/scss/pages/_case.scss
+++ b/src/assets/scss/pages/_case.scss
@@ -14,10 +14,11 @@
 	.clip-top {
 		-webkit-clip-path: polygon(100% 0%, 0 0, 0% 100%);
 		clip-path: polygon(100% 0%, 0 0, 0% 100%);
-		padding: 100px 0 0 0;
+		padding: 55px 0 0 0;
 		background: rgb(95, 165, 205);
 		text-align: center;
 		margin-bottom: 90px;
+		margin-top: -25px;
 	}
 	.section_1 {
 		background: linear-gradient(
@@ -111,14 +112,20 @@
 	}
 
 	.bread_crumps{
-		background: rgb(95, 165, 205);
-		margin-top: -1px;
+		text-align: left;
+		position: relative;
+		z-index: 150;
+		padding-top: 12px;
 		.txt{
 			width: 92%;
 			margin: 0 auto;
 			max-width: 1100px;
 			color: #fff;
 			font-family: yu-mincho-pr6n, sans-serif;
+		}
+
+		span{
+			padding: 0 8px;
 		}
 	}
 
